mas-crm/force-app/main/default/objects/Engineer__c/Engineer__c.object-meta.xml
<CustomObject>
    <label>Engineer</label>
    <nameField>
        <label>Engineer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Engineers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>