mas-crm/force-app/main/default/objects/Engineer__c/fields/Engineer_Email__c.field-meta.xml
<CustomField>
    <fullName>Engineer_Email__c</fullName>
    <label>Email ID</label>
    <required>true</required>
    <type>Email</type>
</CustomField>