mas-crm/force-app/main/default/objects/Engineer__c/fields/Engineer_ID__c.field-meta.xml
<CustomField>
    <fullName>Engineer_ID__c</fullName>
    <displayFormat>ENG-{0000}</displayFormat>
    <label>Engineer ID</label>
    <type>AutoNumber</type>
</CustomField>